
Some specific notes for MediaWiki 1.35 upgrades are below:

* …

For notes on 1.34.x and older releases, see HISTORY.

=== Configuration changes for system administrators in 1.35 ===

…

==== New configuration ====
* $wgDiffEngine can be used to specify the difference engine to use, rather
  than choosing the first of $wgExternalDiffEngine, wikidiff2, or php that
  is usable.

==== Changed configuration ====
* $wgResourceLoaderMaxage (T235314) - This configuration array controls the
  max-age for HTTP caching through the Cache-Control header. It has uses the
  "versioned" key for urls that do have a version parameter, and the
  "unversioned" key for urls without a version parameter. The sub keys for
  "client" and "server" are no longer supported in MediaWiki 1.35.
* …

==== Removed configuration ====
* $wgSysopEmailBans — This setting, deprecated in 1.34, was removed. To let
  sysops block email access, use $wgGroupPermissions['sysop']['blockemail'].
* …


=== New user-facing features in 1.35 ===
* …


=== New developer features in 1.35 ===
* If CSP is enabled, extensions can now add additional sources using the
  ContentSecurityPolicy::addDefaultSource, ::addStyleSrc and ::addScriptSrc
  methods (e.g. $context->getOutput()->getCSP()->addDefaultSrc( 'example.com' ))
* …

=== External library changes in 1.35 ===
* …

==== New external libraries ====
* …

==== Changed external libraries ====
* symfony/yaml was upgraded from 3.4.28 to 4.3.4
* pear/mail_mime was upgraded from 1.10.2 to 1.10.4
* Updated nikic/php-parser from 3.1.5 to 4.2.4 (dev-only).
* …

==== Removed external libraries ====
* …

=== Bug fixes in 1.35 ===
* …

=== Action API changes in 1.35 ===
* …

=== Action API internal changes in 1.35 ===
* …

=== Languages updated in 1.35 ===
MediaWiki supports over 350 languages. Many localisations are updated regularly.
Below only new and removed languages are listed, as well as changes to languages
because of Phabricator reports.

* …
