@@ -32,6 +32,9 @@ For notes on 1.34.x and older releases, see HISTORY.
 * $wgDiffEngine can be used to specify the difference engine to use, rather
   than choosing the first of $wgExternalDiffEngine, wikidiff2, or php that
   is usable.
+* Per-user concurrency in SpecialContributions can now be limited by setting
+  $wgPoolCounterConf['SpecialContributions'] appropriately.
+* …
 
 ==== Changed configuration ====
 * $wgResourceLoaderMaxage (T235314) - This configuration array controls the
